@@ -6,8 +6,12 @@ version 2.83
 	dnsmasq with DNSSEC compiled in and enabled is vulnerable to this,
 	referenced by CERT VU#434904.
 
+	Be sure to only accept UDP DNS query replies at the address
+	from which the query was originated. This keeps as much entropy
+	in the {query-ID, random-port} tuple as possible, help defeat
+	cache poisoning attacks. Refer: CERT VU#434904.
 
->>>>>>> Fix remote buffer overflow CERT VU#434904
+
 version 2.82
 	Improve behaviour in the face of network interfaces which come
 	and go and change index. Thanks to Petr Mensik for the patch.
